--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -1,3 +1,13 @@
 .services {
     height: 100vh;
 }
+
+.each-slide {
+    /* background-color: #f5f5f5; */
+    height: 100vh;
+}
+
+.service-image {
+    height: 50vh;
+    box-shadow: 0 0 100px whitesmoke;
+}
