--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
 .App {
-    background-image: url('../public/4.jpg') ;
-    /* background-image: url('../public/5.jpg') ; */
+    background-image: url('../public/mika-original.jpg') ;
     background-size: cover;
     transition: 1s;
+}
+
+@media screen and (max-width: 500px) {
+    .App {
+        background-image: url('../public/mika-medium.jpg') ;
+        background-position: center;
+    }  
 }
