--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -8,15 +8,15 @@
 }
 
 .service-image {
-    height: 50vh;
-    width: 50vw !important;
+    height: 75vh;
+    width: 100vw !important;
     box-shadow: 0 0 100px whitesmoke;
 }
 
 @media screen and (max-width: 500px) {
     .service-image {
         height: 75vh;
-        width: 75vw !important;
+        /* width: 75vw !important; */
     }
 
 }
