--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
-    background-image: url('../public/mika-original.jpg') ;
+    /* background-image: url('../public/mika-original.jpg') ;
     background-size: cover;
-    transition: 1s;
+    transition: 1s; */
 }
 
 @media screen and (max-width: 500px) {
