--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -8,14 +8,14 @@
 }
 
 .service-image {
-    height: 75vh;
-    width: 100vw !important;
-    box-shadow: 0 0 100px whitesmoke;
+    height: 100vh;
+    width: 100% !important;
+    /* box-shadow: 0 0 100px whitesmoke; */
 }
 
 @media screen and (max-width: 500px) {
     .service-image {
-        height: 75vh;
+        height: 100vh;
         /* width: 75vw !important; */
     }
 
