--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -13,6 +14,10 @@ code {
 }
 
 body {
-  height:100vh;
-  width:100vw;
+  /* height:100vh;
+  width:100vw; */
+}
+
+::-webkit-scrollbar {
+  width: 0;
 }
