--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,4 +1,4 @@
-.main {
+#main {
   height: 100vh;
   transition: 1s;
 
@@ -8,11 +8,13 @@
   background-size: cover;
   background-position: bottom;
   transition: 1s;
+  transition: 1s;
 }
-.scrollBtn {
+
+/* .scrollBtn {
   height: 50px;
   width: 30px;
-  border: 2px solid black;
+  border: 2px solid whitesmoke;
   border-radius: 50px;
   background: none;
   cursor: pointer;
@@ -26,7 +28,7 @@
   position: absolute;
   top: 10%;
   left: 50%;
-  border: 2px solid black;
+  border: 2px solid whitesmoke;
   height: 10px;
   width: 10px;
   transform: translate(-50%, -100%) rotate(45deg);
@@ -52,7 +54,7 @@
     opacity: 0;
     top: 90%;
   }
-}
+} */
 
 .container {
   font-size: 24px;
