removing background for max-width: 500

--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,8 @@
 }
 
 @media screen and (max-width: 500px) {
-    .App {
+    /* .App {
         background-image: url('../public/mika-medium.jpg') ;
         background-position: center;
-    }  
+    }   */
 }
