--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -10,10 +10,13 @@
 }
 
 .services h1 {
-    -webkit-box-reflect: below 1px linear-gradient(transparent, #0008);
+    font-size: 42px !important;
+    font-weight: 200;
+    font-size: 1.8em;
     text-transform: uppercase;
-    line-height: 0.8em;
-    outline: none;
+    letter-spacing: 0.5em;
+    padding-top: 15%;
+    text-align: center;
 }
 
 .service-name {
